[package]
name = "kvs"
version = "0.1.0"
authors = ["Zhixiang Hao <haozx@buaa.edu.cn>"]
description = "A key-value store"
edition = "2018"

license = "MIT"

[dependencies]
structopt = "0.2"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
