[package]
name = "kvs"
version = "0.1.0"
authors = ["Zhixiang Hao <haozx@buaa.edu.cn>"]
description = "A key-value store"
edition = "2018"

license = "MIT"

[dependencies]
structopt = "0.2"
serde = "1.0"
serde_json = "1.0"
slog = "2.5.2"
slog-json = "2.3.0"
sled = "0.24"
ctrlc = "3.1"
crossbeam-channel = "0.3.9"

[dev-dependencies]
assert_cmd = "0.11.0"
criterion = "0.2.11"
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bench]]
name = "benches"
harness = false
